# squarez

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  Makefile.am  README  autogen.sh  build_daemon.sh  build_webclient.sh  common.pri  configure.ac  generate-images.sh  generated_resources.qrc  resources.qrc  squarez.desktop  squarez.kdev4  squarez.pro  update_translations.sh
android/: AndroidManifest.xml
clients/: httprequest.cpp  httprequest.h  onlinesingleplayerrules.cpp  onlinesingleplayerrules.h  tutorialrules.cpp  tutorialrules.h
clients/qml/: CMakeLists.txt  cellproxy.cpp  cellproxy.h  highscores.cpp  highscores.h  httprequest.cpp  main.cpp  rulesproxy.cpp  rulesproxy.h  selectionproxy.cpp  selectionproxy.h  settings.cpp  settings.h  settingvalue.cpp  settingvalue.h
clients/qml/proxy/: rulesproxy.cpp  rulesproxy.h
clients/web/: CMakeLists.txt  cellproxy.cpp  cellproxy.h  eventhandler.cpp  eventhandler.h  game.css  gameSelection.css  highscores.cpp  highscores.h  httprequest.cpp  index.html  jscallback.cpp  jscallback.h  manifest.appcache.in  manifest.webapp.in  multiplayer.html  online.html  post.js  rulesproxy.cpp  rulesproxy.h  selectionproxy.cpp  selectionproxy.h  singleplayer.html  tutorial.html
data/: CMakeLists.txt  resources.qrc
data/img/: COPYING  particle.xcf  shape.svg.m4  shape0.m4  shape1.m4  shape2.m4
data/qml/: GameArea.qml  HighScores.qml  SinglePlayerGame.qml  SingleSquare.qml  main.qml
debian/: README.source  changelog  control  copyright  rules  squarez-server.postinst
qml/: GameArea.qml  main.qml
qml/pages/: FirstPage.qml  NameInput.qml  SinglePlayerPage.qml
qml/squarez/: GameArea.qml  HighScoresArea.qml  TimerArea.qml  main.qml
rpm/: squarez.spec  squarez.yaml
sailfish/: harbour-squarez.desktop  harbour-squarez.pro  squarez.pro
sailfish/qml/: harbour-squarez.qml
sailfish/qml/cover/: CoverPage.qml
sailfish/qml/pages/: FirstPage.qml  HighScoreItem.qml  MultiPlayerPage.qml  NameInput.qml  SettingsPage.qml  SinglePlayerPage.qml  SwipeHint.qml  TutorialPage.qml
sailfish/qml/squarez/: GameArea.qml  Settings.qml  SingleSquare.qml  TimerArea.qml
sailfish/rpm/: harbour-squarez.yaml  squarez.spec  squarez.yaml
sailfish/src/: squarez.cpp
server/: CMakeLists.txt  config.h.in  highscores.cpp  highscores.h  requesthandler.cpp  requesthandler.h  server.cpp  server_http.h  serverrules.cpp  serverrules.h  squarezd.conf  squarezd.service  squarezd.service.in  squarezd.socket  sysusers-squarezd.conf  tmpfiles-squarezd.conf
shared/: config.h.in
shared/database/: database.cpp  database.h
shared/game/: cell.cpp  cell.h  constants.cpp  constants.h  gameboard.cpp  gameboard.h  highscores.cpp  score.cpp  selection.cpp  selection.h  transition.cpp  transition.h
shared/network/: methods.cpp  methods.h  urltools.cpp  urltools.h
shared/rules/: onlinesingleplayerrules.cpp  onlinesingleplayerrules.h  rules.cpp  rules.h  singleplayerrules.cpp  singleplayerrules.h  timer.cpp  timer.h
shared/utils/: serializer.h  unicode.cpp  unicode.h
src/: CMakeLists.txt
src/client/: highscores.cpp  highscores.h  httprequest.cpp  httprequest.h  multiplayerrules.cpp  multiplayerrules.h  rules.cpp  rules.h  score.cpp  score.h  singleplayerrules.cpp  singleplayerrules.h  tutorialrules.cpp  tutorialrules.h  ui.cpp  ui.h
src/game/: cell.cpp  cell.h  gameboard.cpp  highscores.cpp  highscores.h  score.h  selection.cpp  selection.h  transition.cpp
src/js/: binding.cpp  game.js  multiplayer.js  singleplayer.js  squarezUI.js  tutorial.js
src/proxy/qt/: cellproxy.cpp  cellproxy.h  rulesproxy.cpp
src/qt/: cell.cpp  cell.h  main.cpp
src/rules/: rules.cpp  rules.h  singleplayerrules.cpp  singleplayerrules.h  timer.h
src/sdl/: animatable.cpp  animatable.h  cell.cpp  cell.h  colour.cpp  colour.h  demo.cpp  demo.h  game.cpp  game.h  gamerules.cpp  gamerules.h  main.cpp  roundrect.frag.glsl  roundrect.vert.glsl  sdlui.cpp  sdlui.h  shader.cpp  shader.h  singleplayergame.cpp  singleplayergame.h  window.cpp  window.h
src/server/: gamestatus.cpp  gamestatus.h  player.cpp  player.h  requesthandler.cpp  requesthandler.h  server.cpp
src/server/multiplayer/: gamestatus.cpp  gamestatus.h
src/shared/: gameboard.cpp  gameboard.h  httprequest.cpp  httprequest.h  main.cpp  score.cpp  selection.cpp  selection.h  serializer.cpp  serializer.h  timer.cpp  timer.h  transition.cpp  transition.h  ui.cpp  ui.h
src/shared/board/: gameboard.cpp  score.cpp  score.h  selection.cpp  selection.h  transition.cpp
src/shared/network/: methods.cpp  methods.h  urltools.cpp
src/shared/rules/: multiplayerrules.cpp  multiplayerrules.h  rules.cpp  rules.h  singleplayerrules.cpp  singleplayerrules.h
src/test/: bot.cpp  main.cpp  testqt.cpp
src/utils/: serializer.cpp
src/web/: game.css  game.html  gameSelection.css  index.html  manifest.appcache.in  multiplayer.html  singleplayer.html  tutorial.html
test/: CMakeLists.txt  bot.cpp
translations/: en.ts  fr.ts
